# Homework_31

./: .gitignore  README.md  constants.py  db.sqlite3  manage.py  pyproject.toml  pytest.ini  utils.py
ads/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
ads/migrations/: 0001_initial.py  0002_ads_rename_categorymodel_category_delete_adsmodel.py  0003_alter_ads_options_alter_category_options_and_more.py  0004_alter_ads_author.py  0005_remove_ads_address.py  0006_alter_ads_image.py  0007_category_slug_alter_ads_is_published_alter_ads_name_and_more.py  0008_alter_ads_is_published_alter_category_slug.py  0009_alter_category_slug.py
data/: user.csv
first_django/: settings.py  urls.py
fixtures/: ads.json  category.json  location.json  user.json
locations/: admin.py  models.py  serializers.py  urls.py  views.py
locations/migrations/: 0001_initial.py  0002_alter_location_name.py
selections/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
selections/migrations/: 0001_initial.py  0002_selection_owner.py
tests/: conftest.py  factories.py
tests/ads_tests/: ad_create_test.py  ad_retrieve_test.py  ads_list_test.py
tests/selection_tests/: create_selection_test.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_location_name.py  0003_alter_location_options_alter_user_options.py  0004_alter_user_location_delete_location.py  0005_alter_user_managers_user_date_joined_user_email_and_more.py  0006_user_birth_date.py  0007_alter_user_birth_date.py  (+3 more)
